--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,35 +2,41 @@
 agp = "8.7.2"
 coilCompose = "2.7.0"
 constraintlayoutCompose = "1.1.0-beta01"
+coreSplashscreen = "1.0.1"
+coreSplashscreenVersion = "1.2.0-alpha02"
 datastorePreferences = "1.1.1"
-haze = "0.7.3"
-hiltAndroid = "2.52"
+haze = "1.1.1"
+hiltAndroid = "2.53.1"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.20"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.7.3"
-ktorVersion = "3.0.1"
+ktorVersion = "3.0.2"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.10.01"
+composeBom = "2024.11.00"
 navigationCompose = "2.8.3"
 roomRuntime = "2.6.1"
 datastoreCoreAndroid = "1.1.1"
 datastoreCoreJvm = "1.1.1"
+animationAndroid = "1.7.5"
 
 [libraries]
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.0" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-core-splashscreen-v120alpha02 = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreenVersion" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.3" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.4" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
-haze = { module = "dev.chrisbanes.haze:haze", version.ref = "haze" }
-haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version.ref = "haze" }
+haze = { module = "dev.chrisbanes.haze:haze", version = "0.7.3" }
+haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version = "0.7.3" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -43,9 +49,10 @@ androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.5" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.5" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.5" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.5" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-alpha05" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-alpha06" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.5" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorVersion" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorVersion" }
@@ -55,6 +62,7 @@ ktor-client-serialization-jvm = { module = "io.ktor:ktor-client-serialization-jv
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 androidx-datastore-core-jvm = { group = "androidx.datastore", name = "datastore-core-jvm", version.ref = "datastoreCoreJvm" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
+androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version.ref = "animationAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
