--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ coilCompose = "2.7.0"
 constraintlayoutCompose = "1.1.0-beta01"
 coreSplashscreen = "1.0.1"
 coreSplashscreenVersion = "1.2.0-alpha02"
-datastorePreferences = "1.1.1"
+datastorePreferences = "1.1.2"
 haze = "1.1.1"
-hiltAndroid = "2.54"
+hiltAndroid = "2.55"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.20"
 coreKtx = "1.15.0"
@@ -14,11 +14,11 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 kotlinxDatetime = "0.6.1"
-kotlinxSerializationJson = "1.7.3"
+kotlinxSerializationJson = "1.8.0"
 ktorVersion = "3.0.3"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
+activityCompose = "1.10.0"
+composeBom = "2025.01.00"
 navigationCompose = "2.8.3"
 roomRuntime = "2.6.1"
 datastoreCoreAndroid = "1.1.1"
@@ -45,12 +45,12 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.6" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.6" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.6" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.6" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-alpha07" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.6" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.7" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.7" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.7" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.7" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-beta01" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.7" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
