--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,17 +13,17 @@ coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-kotlinxDatetime = "0.6.1"
+kotlinxDatetime = "0.6.2"
 kotlinxSerializationJson = "1.8.0"
-ktorVersion = "3.0.3"
+ktorVersion = "3.1.0"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.0"
-composeBom = "2025.01.00"
+composeBom = "2025.01.01"
 navigationCompose = "2.8.3"
 roomRuntime = "2.6.1"
 datastoreCoreAndroid = "1.1.1"
 datastoreCoreJvm = "1.1.1"
-animationAndroid = "1.7.6"
+animationAndroid = "1.7.8"
 
 [libraries]
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.0" }
@@ -32,7 +32,7 @@ androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", versi
 androidx-core-splashscreen-v120alpha02 = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreenVersion" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.5" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.7" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 haze = { module = "dev.chrisbanes.haze:haze", version = "0.7.3" }
@@ -44,13 +44,13 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.7" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.7" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.7" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.7" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-beta01" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.7" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version = "2025.02.00" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.8" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.8" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.8" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.8" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-beta02" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.8" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
@@ -62,7 +62,7 @@ ktor-client-serialization-jvm = { module = "io.ktor:ktor-client-serialization-jv
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 androidx-datastore-core-jvm = { group = "androidx.datastore", name = "datastore-core-jvm", version.ref = "datastoreCoreJvm" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
-androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version.ref = "animationAndroid" }
+androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version = "1.8.0-beta02" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
