--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,13 +68,14 @@ android {
 dependencies {
     implementation libs.hilt.android
     implementation libs.androidx.animation.android
+    implementation libs.androidx.navigation.runtime.android
     ksp libs.hilt.compiler
     implementation libs.androidx.hilt.navigation.compose
     implementation libs.androidx.datastore.preferences
     implementation libs.androidx.core.splashscreen.v120alpha02
     implementation(libs.kotlinx.datetime)
     implementation(libs.coil.compose)
-    def ktorVersion = '3.1.0'
+    def ktorVersion = '3.1.2'
     implementation(libs.ktor.client.android)
     implementation("io.ktor:ktor-client-core:$ktorVersion")
     implementation libs.ktor.client.serialization
@@ -82,7 +83,7 @@ dependencies {
     implementation libs.ktor.serialization.kotlinx.json
     implementation libs.ktor.client.content.negotiation
 
-    def room_version = "2.6.1"
+    def room_version = '2.7.1'
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.constraintlayout.compose
     implementation libs.androidx.room.runtime
@@ -90,7 +91,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     implementation libs.kotlinx.serialization.json
-    implementation 'com.github.prime-zs.toolkit:core-ktx:2.0.2-alpha'
+    implementation libs.core.ktx
     implementation(libs.haze.materials)
     implementation(libs.haze)
     implementation libs.androidx.core.ktx
