--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,40 +1,43 @@
 [versions]
-agp = "8.7.2"
+agp = "8.9.2"
 coilCompose = "2.7.0"
 constraintlayoutCompose = "1.1.0-beta01"
+coreKtxVersion = "2.0.2-alpha"
 coreSplashscreen = "1.0.1"
-coreSplashscreenVersion = "1.2.0-alpha02"
-datastorePreferences = "1.1.2"
+coreSplashscreenVersion = "1.2.0-beta02"
+datastorePreferences = "1.1.5"
 haze = "1.1.1"
-hiltAndroid = "2.55"
+hiltAndroid = "2.56.2"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.20"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 kotlinxDatetime = "0.6.2"
-kotlinxSerializationJson = "1.8.0"
-ktorVersion = "3.1.0"
+kotlinxSerializationJson = "1.8.1"
+ktorVersion = "3.1.2"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
+activityCompose = "1.10.1"
 composeBom = "2025.01.01"
 navigationCompose = "2.8.3"
-roomRuntime = "2.6.1"
+roomRuntime = "2.7.1"
 datastoreCoreAndroid = "1.1.1"
 datastoreCoreJvm = "1.1.1"
 animationAndroid = "1.7.8"
+navigationRuntimeAndroid = "2.9.0-rc01"
 
 [libraries]
-androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.0" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.1.1" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-core-splashscreen-v120alpha02 = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreenVersion" }
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version = "1.1.4" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.7" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.8.9" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+core-ktx = { module = "com.github.prime-zs.toolkit:core-ktx", version.ref = "coreKtxVersion" }
 haze = { module = "dev.chrisbanes.haze:haze", version = "0.7.3" }
 haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version = "0.7.3" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
@@ -44,14 +47,14 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version = "2025.02.00" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.7.8" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.7.8" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.7.8" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.7.8" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0-beta02" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.7.8" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version = "2025.04.01" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.8.0" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.8.0" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.8.0" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.8.0" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.8.0" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.8.0" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.2" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorVersion" }
@@ -62,7 +65,8 @@ ktor-client-serialization-jvm = { module = "io.ktor:ktor-client-serialization-jv
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 androidx-datastore-core-jvm = { group = "androidx.datastore", name = "datastore-core-jvm", version.ref = "datastoreCoreJvm" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
-androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version = "1.8.0-beta02" }
+androidx-animation-android = { group = "androidx.compose.animation", name = "animation-android", version = "1.8.0" }
+androidx-navigation-runtime-android = { group = "androidx.navigation", name = "navigation-runtime-android", version.ref = "navigationRuntimeAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
