--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ pluginManagement {
             }
         }
         mavenCentral()
+       maven {url 'https://maven.myket.ir'}
         gradlePluginPortal()
     }
 }
@@ -16,6 +17,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {url 'https://maven.myket.ir'}
         maven { url 'https://jitpack.io' }
     }
 }
